# hse_football_api

./: LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_02_07_1330-58de2a51706a_create_players_table.py  2025_02_07_1404-4affb479966b_create_teams_table.py  2025_02_07_1416-2f7a2dd365f7_create_tournaments_table.py  2025_02_07_1435-4494bfc197ea_create_player_statistics_table.py  2025_02_07_1649-2b84c7432826_create_rosters_table.py  2025_02_07_1707-e7311bea23bf_create_matches_table.py  2025_02_07_1728-8f2224ad521e_create_match_events_table.py  2025_02_07_1754-3596aa61fbf2_create_tournament_standings_table.py  2025_02_07_1833-8eca0c477644_create_managers_table.py  2025_02_08_1253-530f08c8bde2_add_event_time_for_match_events.py
src/hse_football_api/: .env.template  main.py
src/hse_football_api/core/: config.py  lifespan.py
src/hse_football_api/core/models/: __init__.py  base.py  db_helper.py  enums.py  manager.py  match.py  match_event.py  mixins.py  player.py  player_statistics.py  roster.py  team.py  tournament.py  tournament_standings.py
