[project]
name = "hse_football_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Islam Kodzokov", email = "email@example.com"},
]
dependencies = ["fastapi>=0.115.7", "uvicorn[standard]>=0.34.0", "pydantic[email]>=2.10.6", "pydantic-settings>=2.7.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
